[package]
name = "neurons_agent"
version = "0.1.0"
authors = ["jingminglang"]
edition = "2018"


[dependencies]
reqwest = "0.9.12"
rustc-serialize = "0.3.24"
subprocess = "0.1.18"
iron = "*"
router = "0.6.0"
notify = "4.0.10"
rand = "0.6.5"
regex = "1.1.2"
getopts = "0.2.18"
serde = {version = "1.0.89",features = ["derive"]}
serde_json = "1.0.39"
redis = "0.10.0"
md5 = "0.6.1"
sled = "0.21.4"
job_scheduler = "1.0.6"
timer = "0.2.0"
chrono = "0.4.6"
clap = "2.33.0"
lazy_static = "1.3.0"
rust-ini = "0.13.0"
log = "0.4.6"
env_logger = "0.6.1"
log4rs = "0.8.3"
nix = "0.13.0"
